lab02/ex1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:45:02 **** Incremental Build of configuration Debug for project ex1 ****
make all 
Building file: ../src/ex1.cpp
Invoking: GCC C++ Compiler
g++ -std=c++03 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ex1.d" -MT"src/ex1.o" -o "src/ex1.o" "../src/ex1.cpp"
../src/ex1.cpp: In function ‘int main()’:
../src/ex1.cpp:20:1: error: expected ‘;’ before ‘}’ token
 }
 ^
make: *** [src/ex1.o] Erreur 1
src/subdir.mk:18 : la recette pour la cible « src/ex1.o » a échouée
